--- a/.github/workflows/unibuild.yml
+++ b/.github/workflows/unibuild.yml
@@ -10,6 +10,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  TMPDIR: ${{github.workspace}}/.unibuilld_tmp
+  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -22,9 +25,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
+      
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Build tempdir in workspace
+        run: mkdir ${{ env.TMPDIR }}
+        
+      # Runs a single command using the runners shell
+      - name: Run make
         run: make
       
       # Upload RPMs as artifacts
