--- a/.github/workflows/unibuild.yml
+++ b/.github/workflows/unibuild.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 env:
-  TMPDIR: /github/workspace/.unibuilld_tmp
+  TMPDIR: ./unibuilld_tmp
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
