Still trying to get gather to work

--- a/.github/workflows/unibuild.yml
+++ b/.github/workflows/unibuild.yml
@@ -32,7 +32,9 @@ jobs:
         
       # Runs a single command using the runners shell
       - name: Run make
-        run: make
+        run: | 
+          unibuild make
+          unibuild gather
       
       # Upload RPMs as artifacts
       - uses: actions/upload-artifact@v3
