--- a/.github/workflows/unibuild.yml
+++ b/.github/workflows/unibuild.yml
@@ -35,7 +35,12 @@ jobs:
         run: | 
           unibuild make
           mkdir unbuild-repo
+          echo "############START DEBUG############"
+          pwd
+          ls
+          cat unibuild-order
           unibuild order
+          echo "############END DEBUG#############"
           unibuild gather unbuild-repo
       
       # Upload RPMs as artifacts
