--- a/.github/workflows/unibuild.yml
+++ b/.github/workflows/unibuild.yml
@@ -43,4 +43,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: ${{ github.ref_name }}-alma8
-          path: unibuild-repo/
+          path: unbuild-repo
