--- a/docker-compose.unibuild.yml
+++ b/docker-compose.unibuild.yml
@@ -4,6 +4,10 @@ services:
     image: ghcr.io/perfsonar/unibuild/alma8:latest
     volumes:
       -  .:/app
+  alma9:
+    image: ghcr.io/perfsonar/unibuild/alma9:latest
+    volumes:
+      -  .:/app
   centos7:
     image: ghcr.io/perfsonar/unibuild/centos7:latest
     network_mode: "host"
